# QSearchable

./: .gitignore  CMakeLists.txt  README.md  qsearchable-module.html  qsearchable.index  qsearchableindex-members.html  qsearchableindex.html  qsearchableitem-members.html  qsearchableitem.html
.github/workflows/: ci.yml
cmake/: QSearchableConfig.cmake.in
docs/: qsearchable.qdocconf
example/: CMakeLists.txt  ListDemoWindow.cpp  ListDemoWindow.h  app.icns  main.cpp  resources.qrc
src/: QSearchableIndex.cpp  QSearchableIndex.h  QSearchableItem.cpp  QSearchableItem.h
src/backends/: CoreSpotlightBackend.h  CoreSpotlightBackend.mm  GnomeSearchBackend.cpp  GnomeSearchBackend.h  KRunnerBackend.cpp  KRunnerBackend.h  NoOpBackend.cpp  NoOpBackend.h  QSearchableIndexBackend.h  SearchableItemStore.cpp  SearchableItemStore.h  WindowsSearchBackend.cpp  WindowsSearchBackend.h
src/installer/: QSearchableInstaller.cpp  QSearchableWindowsInstaller.cpp
src/propertyhandler/: QSearchablePropertyHandler.cpp  QSearchablePropertyHandler.h  dllmain.cpp  exports.def
tests/: CMakeLists.txt  tst_qsearchableindex.cpp  tst_searchableitemstore.cpp
